# EsercitazioniFondamenti

./: .atom-build.json  .gitignore  CMakeLists.txt  README.md  definitions.h
00-Main/: common.c  common.h  maincludes.h  maincursed.c  maincurseless.c
20181015/Esercizio-1/: main.c
20181015/Esercizio-2/: main.c
20181015/Esercizio-3/: main.c
20181015/Esercizio-4/: main.c
20181015/Esercizio-5/: main.c
20181015/Esercizio-6/: main.c
20181015/Esercizio-7/: main.c
20181015/Esercizio-8/: main.c
20181023/Esercizio-1/: main.c
20181023/Esercizio-3/: main.c
20181113/Esercizio1/: a.out  main.c
Calore/: functions.c  functions.h  main.c
CarattereASCII/: functions.c  functions.h  main.c
CinqueNumeri/: functions.c  functions.h  main.c
ConvertiBinario/: functions.c  functions.h  main.c
DatiRettangolo/: functions.c  functions.h  main.c
FormatoData/: functions.c  functions.h  main.c
MediaConSentinella/: functions.c  functions.h  main.c
MediaConVettore/: functions.c  functions.h  main.c
MeseSuccessivo/: functions.c  functions.h  main.c
NumeriPari/: functions.c  functions.h  main.c
OrdinareArray/: functions.c  functions.h  main.c
SeparazioneCifre/: functions.c  functions.h  main.c
SerieCrescenteDecrescente/: functions.c  functions.h  main.c
SeriePariDispari/: functions.c  functions.h  main.c
SeriePositiviNegativi/: functions.c  functions.h  main.c
SonoMultipli/: functions.c  functions.h  main.c
Sudoku/: functions.c  functions.h  main.c
TipoTriangolo/: functions.c  functions.h  main.c
TrasponiMatrice/: functions.c  functions.h  main.c
TriangoloStellato/: functions.c  functions.h  main.c
